--- a/package.json
+++ b/package.json
@@ -42,11 +42,10 @@
     "lint-staged": "^15.3.0",
     "prettier": "^3.4.2",
     "secretlint": "^9.0.0",
-    "vite": "^6.0.6"
-  },
-  "dependencies": {
+    "vite": "^6.0.6",
     "eslint": "^9.17.0",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.18.2"
-  }
+  },
+  "dependencies": {}
 }
