chore: bump deps

--- a/package.json
+++ b/package.json
@@ -33,19 +33,18 @@
     ]
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.6.1",
-    "@commitlint/config-conventional": "^19.6.0",
-    "@flydotio/dockerfile": "^0.5.9",
-    "@secretlint/secretlint-rule-preset-recommend": "^9.0.0",
-    "eslint-config-prettier": "^9.1.0",
+    "@commitlint/cli": "^20.1.0",
+    "@commitlint/config-conventional": "^20.0.0",
+    "@flydotio/dockerfile": "^0.7.10",
+    "@secretlint/secretlint-rule-preset-recommend": "^11.2.5",
+    "eslint": "^9.38.0",
+    "eslint-config-prettier": "^10.1.8",
     "husky": "^9.1.7",
-    "lint-staged": "^15.3.0",
-    "prettier": "^3.4.2",
-    "secretlint": "^9.0.0",
-    "vite": "^6.0.6",
-    "eslint": "^9.17.0",
-    "typescript": "^5.7.2",
-    "typescript-eslint": "^8.18.2"
-  },
-  "dependencies": {}
+    "lint-staged": "^16.2.6",
+    "prettier": "^3.6.2",
+    "secretlint": "^11.2.5",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.2",
+    "vite": "^7.1.12"
+  }
 }
