--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
+    "@eslint/js": "^9.38.0",
     "@flydotio/dockerfile": "^0.7.10",
     "@secretlint/secretlint-rule-preset-recommend": "^11.2.5",
     "eslint": "^9.38.0",
