feat: update scripts

--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "build": "bun validate && vite build",
     "preview": "vite preview",
     "lint": "eslint .",
-    "lint:fix": "bun lint --fix",
+    "lint:fix": "eslint . --fix",
     "format": "prettier --ignore-path .gitignore \"**/*.+(js|jsx|ts|tsx|md)\"",
-    "format:fix": "bun format --write \"**/*.+(js|jsx|ts|tsx|md)\"",
-    "format:check": "bun format --list-different",
-    "validate": "bun run \"/^(lint|format:check)$/\"",
+    "format:fix": "prettier --ignore-path .gitignore \"**/*.+(js|jsx|ts|tsx|md)\" --write",
+    "format:check": "prettier --ignore-path .gitignore \"**/*.+(js|jsx|ts|tsx|md)\" --list-different",
+    "validate": "bun lint && bun format:check",
     "postinstall": "bun husky",
     "clean:node_modules": "rm -rf node_modules"
   },
